[package]
name = "storm"
description = "Meta-package manager for isolated applications"
version = "0.1.0"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
edition = "2018"
repository = "https://github.com/milkey-mouse/storm"
readme = "README.md"
license = "CC0-1.0"
categories = [
    "command-line-utilities",
    "filesystem"
]
keywords = [
    "storm",
    "package-manager",
    "stormpkg",
    "portage",
    "ports"
]
maintenance = { status = "experimental" }

[profile.release]
lto = true

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
nix = "0.16.1"
phf = { version = "0.8.0", features = ["macros"] }
quick-error = "1.2.3"
serde = { version = "1.0.104", features = ["derive"] }
toml = { version = "0.5.6", features = ["preserve_order"] }
